force-app/main/default/objects/Vendor_Quote__c/Vendor_Quote__c.object-meta.xml
<CustomObject>
    <label>Vendor Quote</label>
    <nameField>
        <label>Vendor Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>