force-app/main/default/objects/Vendor_Quote__c/fields/Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service__c</fullName>
    <description>Date the vendor will complete the work order.</description>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>