force-app/main/default/objects/Vendor_Quote__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <description>Hourly rate quoted by vendor for this job.</description>
    <label>Hourly Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>