force-app/main/default/objects/Vendor_Quote__c/fields/Job_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Job_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this quote accepted by the relevant property manager?</description>
    <label>Job Awarded</label>
    <type>Checkbox</type>
</CustomField>