force-app/main/default/objects/Vendor_Quote__c/fields/Maintenance_Request__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Request__c</fullName>
    <label>Maintenance Request</label>
    <referenceTo>Maintenance_Request__c</referenceTo>
    <relationshipLabel>Vendor Quotes</relationshipLabel>
    <relationshipName>Vendor_Quotes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>