force-app/main/default/objects/Vendor_Quote__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Vendor Quotes</relationshipLabel>
    <relationshipName>Vendor_Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>