force-app/main/default/objects/Vendor_Quote__c/validationRules/Reserve_Fund_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserve_Fund_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Hourly_Rate__c  * Hours__c &gt;  Maintenance_Request__r.Property__r.Management_Contract__r.Reserve_Fund__c  &amp;&amp;  Job_Awarded__c  = true</errorConditionFormula>
    <errorMessage>This job cannot be awarded because the quote price exceeds the reserve fund for this property.</errorMessage>
</ValidationRule>