force-app/main/default/objects/Vendor_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Service__c</columns>
    <columns>Hourly_Rate__c</columns>
    <columns>Hours__c</columns>
    <columns>Job_Awarded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>